2017-08-31  Julien Bect  <julien.bect@centralesupelec.fr>

	INDEX: Add @stk_factorialdesign/ismember

	* admin/octpkg/INDEX: INDEX: Add @stk_factorialdesign/ismember.

	Convert AUTHORS to markdown.

	* AUTHORS: Renamed to AUTHORS.md
	* AUTHORS.md: Renamed from AUTHORS, and converted to md syntax.
	* admin/find_nonstandard_characters.sh: Scan AUTHORS.md as well.
	* admin/build_tools/build_octpkg.m: Update.
	* README.md: Update.
	* admin/RELEASE.md: Update.

	NEWS.md: Write Matérn with an accent on the "e"

	* NEWS.md: Write Matérn with an accent on the "e", since we are
	already using UTF-8 in this file anyway (for the umlaut on the "u"
	of Müller).

2017-08-30  Julien Bect  <julien.bect@centralesupelec.fr>

	Overload ismember for stk_factorialdesign objects (ticket #29)

	* arrays/@stk_factorialdesign/ismember.m: New function

2017-08-29  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_sampcrit_ehvi_eval.m: Avoid OOM errors (ticket #48)

	* sampling/stk_sampcrit_ehvi_eval.m: Process batches of rectangles
	to avoid OOM errors.

	Adapt html doc generation to changes in generate_html (fix)

	* admin/build_tools/get_allpurpose_html_options.m: Fix earlier
	commit (a12753859a6a) with the same name.

	generate_htmldoc.m: Use HTML version of NEWS.md (ticket #61)

	* admin/build_tools/generate_htmldoc.m: Insert HTML version of
	NEWS.md, produced by markdown, inside NEWS.html.

	NEWS.md: Fix markdown formatting

	* NEWS.md: Fix markdown formatting

2017-08-28  Julien Bect  <julien.bect@centralesupelec.fr>

	Convert NEWS to markdown formatting (ticket #60)

	* NEWS.md: Convert NEWS to markdown formatting and rename to NEWS.md.
	* NEWS: Removed.
	* admin/build_tools/build_octpkg.m: Rename NEWS to NEWS.md.

2017-08-26  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/ismember.m: Do not assume 'rows' (ticket #50)

	* arrays/@stk_dataframe/ismember.m: Do not assume 'rows', in order
	to have a behaviour that is consistent with that of the base