@@ -69,7 +69,11 @@ enhance_copying (htmldoc_dir, htmldocparts_dir);
 % Make a few changes to index.html
 modify_index_html (htmldoc_dir);
 
-% Create html version of the NEWS file_in_loadpath
+% Create html version of the AUTHORS file
+% (must be done first, before NEWS.html has been modified too)
+create_authors_html (root_dir, htmldoc_dir);
+
+% Create html version of the NEWS file
 create_news_html (root_dir, htmldoc_dir);
 
 success = true;
@@ -88,7 +92,7 @@ s = (char (fread (fid)))';
 fclose (fid);
 
 tmp = regexp (s, ...
-  '<body>(?<content>.*?)<p>END OF TERMS', 'names');
+    '<body>(?<content>.*?)<p>END OF TERMS', 'names');
 
 s_GPLv3 = tmp(1).content;
 
@@ -101,7 +105,7 @@ s = (char (fread (fid)))';
 fclose (fid);
 
 s = regexprep (s, '<pre>.*</pre>', ...
-  ["<div id=\"GPLv3\">\n" s_GPLv3 "</div>\n"]);
+    ["<div id=\"GPLv3\">\n" s_GPLv3 "</div>\n"]);
 s = regexprep (s, '<h2 class="tbdesc">.*?package</a></p>', '');
 
 fid = fopen_ (fn_copying, 'wt');
@@ -128,6 +132,9 @@ s = regexprep (s, '&lt;.*?@.*?&gt;', '');
 s = regexprep (s, 'Package Author', 'Package Authors');
 s = regexprep (s, 'Package Maintainer', 'Package Maintainers');
 
+% Link to AUTHORS.html file
+s = regexprep (s, 'AUTHORS.md', '<a href="AUTHORS.html">AUTHORS</a>');
+
 % Bold Letters in Description fieldnames
 s = regexprep (s, 'Small Toolbox for Kriging', ...
     '<b>S</b>mall <b>T</b>oolbox for <b>K</b>riging');
@@ -150,6 +157,7 @@ NEWS_md = fullfile (root_dir, 'NEWS.md');
 NEWS_html_tmp = fullfile (root_dir, 'NEWS.html');
 NEWS_html_dst = fullfile (htmldoc_dir, 'stk', 'NEWS.html');
 
+% Generate HTML code, without header or footer
 system (sprintf ('markdown %s > %s', NEWS_md, NEWS_html_tmp));
 
 % Import html code generated by markdown
@@ -167,9 +175,54 @@ s = regexprep (s2, '<pre>.*</pre>', s1);
 
 % Write back to destination file
 fid = fopen_ (NEWS_html_dst, 'wt');
-fprintf (fid, "%s", s);
+fprintf (fid, '%s', s);
 fclose (fid);
 
 delete (NEWS_html_tmp);
+
+end % function
+
+
+%--- create_authors_html -----------------------------------------------------
+
+function create_authors_html (root_dir, htmldoc_dir)
+
+AUTHORS_md = fullfile (root_dir, 'AUTHORS.md');
+AUTHORS_html_tmp = fullfile (root_dir, 'AUTHORS.html');
+AUTHORS_html_dst = fullfile (htmldoc_dir, 'stk', 'AUTHORS.html');
+NEWS_html_src = fullfile (htmldoc_dir, 'stk', 'NEWS.html');
+
+% Generate HTML code, without header or footer
+system (sprintf ('markdown %s > %s', AUTHORS_md, AUTHORS_html_tmp));
+
+% Import html code generated by markdown
+fid = fopen_ (AUTHORS_html_tmp, 'rt');
+s1 = (char (fread (fid)))';
+fclose (fid);
+
+% TRICK: Import HTML code generated by generate_html FOR THE NEWS FILE
+fid = fopen_ (NEWS_html_src, 'rt');
+s2 = (char (fread (fid)))';
+fclose (fid);
+
+t = 'Authors of the ''stk'' package (a.k.a. STK toolbox)';
+
+% Replace page title
+s = regexprep (s2, '<title>.*?</title>', ...
+    sprintf ('<title>%s</title>', t));
+
+% Replace first header
+s = regexprep (s, 'class="tbdesc">.*?</h', ...
+    sprintf ('class="tbdesc">%s</h', t));
+
+% Replace content
+s = regexprep (s, '<pre>.*</pre>', s1);
+
+% Write back to destination file
+fid = fopen_ (AUTHORS_html_dst, 'wt');
+fprintf (fid, '%s', s);
+fclose (fid);
+
+delete (AUTHORS_html_tmp);
 
 end % function
